Refatoração Retorno da Busca, Inclusão Página 404, Inclusão de placeholder no input endereço e refinamento da mensagem - A criança já não está em idade de creche. Saiba como matriculá-la na Educação Básica (ir para Solicitação de Vaga e Matrícula)

--- a/src/componentes/Busca/busca.css
+++ b/src/componentes/Busca/busca.css
@@ -40,6 +40,10 @@ padding-right: 29px;
     border-radius: 50rem !important;
 }
 
+.texto-alert-dander{
+    color: #721c24;
+}
+
 @media only screen and (max-width: 992px) {
     .endereco-autocomplete {
         position: relative;
