--- a/src/componentes/Mapa/Mapa.scss
+++ b/src/componentes/Mapa/Mapa.scss
@@ -39,4 +39,13 @@
       height: 687px;
     }
   }
+
+  .mapa-vagas-remanescentes-creches {
+    background: $corBranco;
+    border: 0 none;
+    box-sizing: border-box;
+    .leaflet-container {
+      height: 915px;
+    }
+  }
 }
