--- a/src/componentes/Mapa/Mapa.scss
+++ b/src/componentes/Mapa/Mapa.scss
@@ -1,22 +1,23 @@
 @import "../../styles/variaveis";
 
 .mapa-completo {
-  @media (min-width: 992px) {
-    padding-right: 0 !important;
-    position: absolute !important;
-    right: 0;
-    width: 100% !important;
-  }
-  @media (max-width: 991px) {
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
+  .leaflet-container {
+    height: 955px;
 
+    @media (min-width: 992px) {
+      width: 640px !important;
+    }
+    @media (max-width: 991px) {
+      margin-top: 40px;
+      margin-bottom: 40px;
+    }
+  }
 
   .mapa {
     background: $corBranco;
     border: 0 none;
     box-sizing: border-box;
+
     .leaflet-container {
       height: 955px;
     }
@@ -26,6 +27,7 @@
     background: $corBranco;
     border: 0 none;
     box-sizing: border-box;
+
     .leaflet-container {
       height: 979px;
     }
@@ -35,6 +37,7 @@
     background: $corBranco;
     border: 0 none;
     box-sizing: border-box;
+
     .leaflet-container {
       height: 687px;
     }
@@ -44,8 +47,9 @@
     background: $corBranco;
     border: 0 none;
     box-sizing: border-box;
+
     .leaflet-container {
-      height: 915px;
+      height: 1051px;
     }
   }
 }
