Atualizando Index e Home

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -65,7 +65,7 @@ body {
 
 .busca-escolas {
   background: $corCinzaClaro url("../img/bg_busca.png");
-  background-blend-mode: lighten;
+  //background-blend-mode: lighten;
   background-size: cover;
   color: $corCinzaHome;
   min-height: 490px;
